<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.kirivasile.khala_im.authorization.RegistrationActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/regToolBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="30dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:textColor="#A9A9A9"
            android:text="@string/Register"
            android:layout_marginStart="2dp"
            android:id="@+id/register"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regEmail">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/regEmailInput"
                android:hint="@string/Email"
                android:textSize="20sp"
                android:paddingStart="2dp"
                >
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regInputName"
            android:layout_marginTop="6dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/regInputNameInput"
                android:hint="@string/Nick"
                android:textSize="20sp"
                android:paddingStart="2dp"
                >
            </EditText>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regInputPassword">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/regInputPasswordInput"
                android:hint="@string/Password"
                android:textSize="20sp"
                android:layout_marginTop="0dp"
                android:paddingStart="2dp"
                >
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:id="@+id/registerButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@color/colorMyGreen"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:text="@string/Create"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
