<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.kirivasile.khala_im.LoginActivity"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="140dp"
            android:id="@+id/signInImageHeader"
            android:layout_above="@+id/signInInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/khala_logo"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:id="@+id/signInInputLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signInEmail">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/signInEmailInput"
                        android:hint="@string/Email"
                        android:textSize="20sp"
                        android:paddingStart="2dp"
                        android:inputType="textEmailAddress"
                        >
                    </EditText>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signInPassword"
                    android:layout_marginTop="16dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/signInPasswordInput"
                        android:hint="@string/Password"
                        android:textSize="20sp"
                        android:paddingStart="2dp"
                        android:inputType="textPassword"
                        >
                    </EditText>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:id="@+id/loginButton"
                android:layout_marginTop="32dp"
                style="@style/WideButton"
                android:background="@color/colorMyGreen"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/bottomSignInPanel"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:id="@+id/DoUHaveAccount"
                android:text="@string/DoUHaveAccount"
                android:textSize="14sp"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/Create"
                android:text="@string/Create"
                android:textColor="#1E90FF"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:clickable="true" />

        </RelativeLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/loginProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorShadowBackground"/>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

</RelativeLayout>
